kubernetes/apps/default/truenas-backup/app/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas-backup
subsets:
- addresses:
  - ip: ${SECRET_NAS_BACKUP_IP}
  ports:
  - name: http
    port: 80
    protocol: TCP
