kubernetes/apps/default/truenas-backup/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app truenas-backup
spec:
  ingressClassName: internal
  rules:
  - host: &host nas-backup.${SECRET_DOMAIN_SECONDARY}
    http:
      paths:
      - backend:
          service:
            name: truenas-backup
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - *host
